--- a/themes/kactus/README.org
+++ b/themes/kactus/README.org
@@ -12,7 +12,7 @@ edit org-page-theme-kactus/templates/index.mustache , find "Your Name" and "Your
 
 change org-page config
 
-add (setq op/theme 'org-page-theme-kactus)
+add (setq aog/theme 'org-page-theme-kactus)
 
 [[file:1.png]]
 
