--- a/doc/quick-guide.org
+++ b/doc/quick-guide.org
@@ -37,12 +37,12 @@
 
   : (add-to-list 'load-path "path/to/org-page")                    ;; only needed if you install org-page manually
   : (require 'org-page)
-  : (setq op/repository-directory "path/to/your/org/repository")   ;; the repository location
-  : (setq op/site-domain "http://your.personal.site.com/")         ;; your domain
+  : (setq aog/repository-directory "path/to/your/org/repository")   ;; the repository location
+  : (setq aog/site-domain "http://your.personal.site.com/")         ;; your domain
   : ;;; the configuration below you should choose one, not both
-  : (setq op/personal-disqus-shortname "your_disqus_shortname")    ;; your disqus commenting system
-  : (setq op/personal-duoshuo-shortname "your_duoshuo_shortname")  ;; your duoshuo commenting system
-  : (setq op/hashover-comments t)                                   ;; activate hashover self-hosted comment system
+  : (setq aog/personal-disqus-shortname "your_disqus_shortname")    ;; your disqus commenting system
+  : (setq aog/personal-duoshuo-shortname "your_duoshuo_shortname")  ;; your duoshuo commenting system
+  : (setq aog/hashover-comments t)                                   ;; activate hashover self-hosted comment system
 
 * Publication
 
@@ -50,11 +50,11 @@
 
   To publish all files, evaluate the following line:
 
-  : (op/do-publication t nil nil t)
+  : (aog/do-publication t nil nil t)
 
   To publish files in your latest commit, evaluate the following line:
 
-  : (op/do-publication)
+  : (aog/do-publication)
 
   it is recommended to execute this command via =M-x= since you
   will see more detailed options.
@@ -63,49 +63,49 @@
 
   If you'd like to preview your new post prior to publication, you can do this with
 
-  : (op/do-publication-and-preview-site)
+  : (aog/do-publication-and-preview-site)
 
-  After executing this command, your site will be published to the =op/site-preview-directory= which defaults to
-  =~/.op-tmp= and will be served locally by [[https://github.com/skeeto/emacs-web-server][simple-httpd]]. The =op/site-preview-directory= variable is
-  customizable. Be sure to read the documentation for =op/do-publication-and-preview-site= for even more options.
+  After executing this command, your site will be published to the =aog/site-preview-directory= which defaults to
+  =~/.op-tmp= and will be served locally by [[https://github.com/skeeto/emacs-web-server][simple-httpd]]. The =aog/site-preview-directory= variable is
+  customizable. Be sure to read the documentation for =aog/do-publication-and-preview-site= for even more options.
 
 * Helpful features
 
   1. Do you find that initializing a repository manually is too much trouble?
-     The =op/new-repository= command can simplify this.
+     The =aog/new-repository= command can simplify this.
 
   2. Want to make starting a post with essential properties much
-     easier? Use the =op/new-post= command.
+     easier? Use the =aog/new-post= command.
 
   3. Already in a post buffer and just want to insert essential
-     properties? Use the =op/insert-options-template= command.
+     properties? Use the =aog/insert-options-template= command.
 
   4. Is the default slogan too ugly? Configure a better one (will be shown on each page):
 
-     : (setq op/site-main-title "your main slogan")
-     : (setq op/site-sub-title "your sub slogan")
+     : (setq aog/site-main-title "your main slogan")
+     : (setq aog/site-sub-title "your sub slogan")
 
   5. Is the branch you store org source files on not named "source"? It's
      easy to override the default branch names:
 
-     : (setq op/repository-org-branch "your source branch name") ;; default is "source"
-     : (setq op/repository-html-branch "your html branch name")  ;; default is "master"
+     : (setq aog/repository-org-branch "your source branch name") ;; default is "source"
+     : (setq aog/repository-html-branch "your html branch name")  ;; default is "master"
 
   6. Have a github account? It's cool:
 
-     : (setq op/personal-github-link "your github link")
+     : (setq aog/personal-github-link "your github link")
 
   7. Want to do site traffic analytics with Google Analytics?
 
-     : (setq op/personal-google-analytics-id "your google analytics id")
+     : (setq aog/personal-google-analytics-id "your google analytics id")
 
   8. Do you want to disable commenting for posts under certain
      categories? Yeah, it can be achieved:
 
-     : (setq op/category-config-alist
+     : (setq aog/category-config-alist
      :       (cons '("photography" ;; category name goes here
      :               :show-comment nil)
-     :             op/category-config-alist))
+     :             aog/category-config-alist))
 
   9. Are there any other items that can be configured? Yeah, there are several:
 
@@ -121,11 +121,11 @@
 
   10. Want to add an avatar to the page?
 
-     : (setq op/personal-avatar "URL to an image")
+     : (setq aog/personal-avatar "URL to an image")
 
   11. Do not want to publish some categories?
 
-     : (setq op/category-ignore-list '("category1" "category2"))
+     : (setq aog/category-ignore-list '("category1" "category2"))
 
 * Other configuration
 
