--- a/themes/wy/README.org
+++ b/themes/wy/README.org
@@ -8,7 +8,7 @@ cp -r org-page-theme-wy ~/.emacs.d/elpa/org-page-xxxx.xx/themes/ or ln -s ~/Gith
 
 change org-page config
 
-add (setq op/theme 'org-page-theme-wy)
+add (setq aog/theme 'org-page-theme-wy)
 
 [[file:1.png]]
 
